--- a/index.html
+++ b/index.html
@@ -2,32 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>JS Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
 
     <title>Number guessing game</title>
-
-    <style>
-      html {
-        font-family: sans-serif;
-      }
-
-      body {
-        width: 50%;
-        max-width: 800px;
-        min-width: 480px;
-        margin: 0 auto;
-      }
-
-      .lastResult {
-        color: white;
-        padding: 3px;
-      }
-    </style>
   </head>
 
   <body>
-    <h1>Number guessing game</h1>
+    <h1>The Number Wizard</h1>
 
-    <p>We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer. We'll tell you if your guess was too high or too low.</p>
+    <p>Can you read The Wizard's mind? Pick a number between 1 and 100 and see if you can guess it within 10 tries.</p>
 
     <div class="form">
       <label for="guessField">Enter a guess: </label>
@@ -40,6 +27,7 @@
       <p class="lastResult"></p>
       <p class="lowOrHi"></p>
     </div>
+	  <div class="wizard"><img src="wizard.png" alt="The Cat Wizard"></div>
 
     <script src="script.js"> </script>
   </body>
