--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>JS Page</title>
+    <title>The Number Wizard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
-
-    <title>Number guessing game</title>
   </head>
 
   <body>
